[package]
name = "lithia"
version = "0.1.0"
authors = ["JoshWhite <jwhite927@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.14.0"
unicode-width = "0.1"
termion = "1.5"
rand = "0.7"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "macros", "any", "mysql", "time" ] }
tokio = { version = "1", features = ["full"] }
